# RCDir

./: .gitattributes  .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Version.toml  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md  workflow.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
scripts/: Build.ps1  CompareOutput.ps1  Deploy.ps1  IncrementVersion.ps1  RunTests.ps1  Setup.ps1  UpdateWingetManifest.ps1
src/: alias_block_generator.rs  alias_manager.rs  alias_types.rs  ansi_codes.rs  cloud_status.rs  color.rs  command_line.rs  config.rs  console.rs  directory_info.rs  directory_lister.rs  drive_info.rs  ehm.rs  environment_provider.rs  file_attribute_map.rs  file_comparator.rs  file_info.rs  icon_mapping.rs  lib.rs  listing_totals.rs  main.rs  mask_grouper.rs  multi_threaded_lister.rs  nerd_font_detector.rs  owner.rs  path_ellipsis.rs  perf_timer.rs  profile_file_manager.rs  profile_path_resolver.rs  reparse_resolver.rs  results_displayer.rs  streams.rs  tree_connector_state.rs  tui_widgets.rs  usage.rs  work_queue.rs
src/config/: mod.rs  (+2 more)
tests/: alias_parity_test.ps1  output_parity.rs  tree_mode_tests.rs
winget/: relmer.RCDir.installer.yaml  relmer.RCDir.locale.en-US.yaml  relmer.RCDir.yaml
(+73 files in other folders)
